# pysc2-compat

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
bazel/: create_external_repos.bzl  requirements.txt
docs/: bazel.md  converters.md  environment.md  mini_games.md
pysc2/: __init__.py
pysc2/agents/: no_op_agent.py  random_agent.py  scripted_agent.py
pysc2/env/: BUILD  available_actions_printer.py  base_env_wrapper.py  converted_env.py  enums.py  environment.py  host_remote_agent.py  lan_sc2_env.py  mock_sc2_env.py  mock_sc2_env_comparison_test.py  mock_sc2_env_test.py  remote_sc2_env.py  run_loop.py  sc2_env.py  sc2_env_test.py
pysc2/env/converter/: BUILD  converter.py  derive_interface_options.py
pysc2/env/converter/cc/game_data/python/: uint8_lookup_test.py
pysc2/lib/: BUILD  actions.py  app.py  buffs.py  colors.py  features.py  features_test.py  flags.py  image_differencer.py  image_differencer_test.py  logging.py  memoize.py  metrics.py  named_array.py  named_array_test.py  np_util.py  np_util_test.py  point.py  point_flag.py  point_test.py  portspicker.py  portspicker_test.py  proto_diff.py  proto_diff_test.py  protocol.py  remote_controller.py  renderer_ascii.py  renderer_human.py  replay.py  run_parallel.py  run_parallel_test.py  sc_process.py  static_data.py  stopwatch.py  stopwatch_test.py  transform.py  units.py  upgrades.py  video_writer.py
pysc2/lib/replay/: BUILD  replay_converter.py  replay_observation_stream.py  sc2_replay.py  sc2_replay_test.py  sc2_replay_utils.py  sc2_replay_utils_test.py
pysc2/maps/: __init__.py  ladder.py  lib.py  melee.py  mini_games.py
pysc2/run_configs/: __init__.py  lib.py  platforms.py
pysc2/tests/: actions_test.py  debug_test.py  dummy_observation.py  dummy_observation_test.py  easy_scripted_test.py  general_actions_test.py  host_remote_agent_test.py  multi_player_env_test.py  multi_player_test.py  obs_spec_test.py  obs_test.py  observer_test.py  ping_test.py  protocol_error_test.py  random_agent_test.py  render_test.py  replay_obs_test.py  step_mul_override_test.py  utils.py  versions_test.py
tests/: __init__.py  run_tests.py
tests/core/: BUILD  actions_test.py  debug_test.py  dummy_observation_test.py  easy_scripted_test.py  general_actions_test.py  multi_player_env_test.py  multi_player_test.py  observer_test.py  ping_test.py  random_agent_test.py  replay_obs_test.py  test_host_remote_agent.py  test_obs.py  test_obs_spec.py  test_protocol_error.py  test_render.py  test_step_mul_override.py  test_versions.py
tests/env/: BUILD  converted_env_test.py  mock_sc2_env_test.py  sc2_env_test.py  test_converted_env.py  test_converter.py  test_mock_sc2_env_comparison.py
tests/lib/: BUILD  features_test.py
tests/replay/: BUILD  sc2_replay_test.py  sc2_replay_utils_test.py  test_sc2_replay_utils.py
