[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'PySC2-Compat'
version = '4.0.0'
description = 'Starcraft II environment and library for training agents.'
readme = 'README.md'
license = { text = 'Apache License, Version 2.0' }
keywords = ['StarCraft', 'AI']
authors = [{ name = 'DeepMind', email = 'pysc2@deepmind.com' }]
urls = { Homepage = 'https://github.com/deepmind/pysc2' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
requires-python = '>=3.10'
dependencies = [
    'deepdiff',
    'mpyq',
    'numpy >=1.21',
    'portpicker >=1.2.0',
    'protobuf >=3.19.1,<4',
    'requests',
    's2clientprotocol >=4.10.1.75800.0',
    's2protocol',
    'websocket-client',
]

[project.scripts]
pysc2_agent = 'pysc2.bin.agent:entry_point'
pysc2_play = 'pysc2.bin.play:entry_point'
pysc2_replay_info = 'pysc2.bin.replay_info:entry_point'

[project.optional-dependencies]
converter = [
    'dm_env',
    'dm-env-rpc',
]
render = [
    'pygame-ce >=2.1.3',
    'sk-video',
]
test = [
    'dm_env',
    'dm-env-rpc',
    'pygame-ce >=2.1.3',
    'pytest',
    'sk-video',
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ['.']
include = ['pysc2*']
